# Acoustic_Imager

./: .gitignore  README.md  basic_acoustic_imager.py  pyproject.toml  simple_acoustic_beamformer.py
.github/workflows/: notify_discord.yml
Testing/: fake_data.py  shape_config.py
data/debug/: create_debug_file.py
data/directional_history/: directional-history-2026-03-12.jsonl  directional-history-2026-03-14.jsonl  directional-history-2026-03-15.jsonl
data/heatmap_captures/: archive_folders.json  gallery_metadata.json
deploy/: deploy_imager.sh  deploy_imager_acousticgod.sh  deploy_imager_basem.sh  deploy_imager_david.sh  deploy_imager_test.sh
deploy/splash/: install_splash.sh  mytheme.script
embedded/: .cproject  .mxproject  .project  AcousticImager.ioc  TODO.md
embedded/Core/Src/: main.c  stm32h7xx_hal_msp.c
embedded/G4/: G4.ioc
embedded/RasPi/: raspi_env_setup.sh  setup_notes.txt
embedded/STM32/: CMakeLists.txt  How_to_guide.md  STM32G473VCTx_FLASH.ld  STM32H723VGTx_FLASH.ld  configuringSTM.txt  main.cpp  test.cpp
embedded/STM32/Core/Inc/: main.h  stm32g4xx_hal_conf.h
embedded/STM32/Core/Src/: stm32h7xx_it.c
embedded/STM32/Drivers/STM32G4xx_HAL_Driver/Inc/: stm32g4xx_hal_i2s.h
embedded/STM32/acquisition/: data_acquisition.cpp  data_acquisition.hpp
embedded/STM32/fft/: fft_processor.cpp  fft_processor.hpp
embedded/STM32/preprocessing/: audio_preprocessing.cpp  audio_preprocessing.hpp
embedded/STM32G4_Cap/: firmware_TODO.md  platformio.ini  stm32g473vctx.json
embedded/STM32G4_Cap/include/: main.h  stm32g4xx_hal_conf.h  stm32g4xx_it.h
embedded/STM32G4_Cap/src/: Makefile  adc.c  gpio.c  main.c  spi.c  stm32g4xx_it.c  tim.c  usart.c
embedded/STM32G4_Cap/src/CubeMX/: .cproject  .mxproject  .project  G4 Debug.launch  G4.ioc  Makefile  STM32G473XX_FLASH.ld
embedded/STM32_G4/: .mxproject  G4.ioc  INSTALL.md  Makefile  main.cpp
embedded/STM32_G4/Core/: stm32g4xx_it.h
embedded/STM32_G4/Core/Inc/: adc.h  stm32g4xx_hal_conf.h
embedded/STM32_G4/Core/Src/: adc.c  gpio.c  main.c  spi.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c  tim.c  usart.c
embedded/STM32_G4/acquisition/: data_acquisition.cpp
env_setup/: raspi_env_setup.sh  setup_notes.txt
github/workflows/: discord.yml
hardware/: README.md
heatmap/: README.md  heatmap_pipeline_test.py  requirements.txt
software/: README.md
software/aquisition/: data_aquisition.py
src/firmware/: TODO.md
src/firmware/STM32G4_Cap/: .project  OTHER.txt  SPI_MCU_STATUS_MISO_debug.md  firmware_TODO.md  force_fpu.py  platformio.ini
src/hardware/: ConsoleReport_Macro.txt  README.md
src/hardware/3D_Design/before_printing/: BACK_TESTING.FCStd  FRONT_TESTING.FCStd
src/hardware/3D_Design/component_step_files/: GPS_Box.step  M4_Fan_screw_8mm.step  generic_BatteryPack_Envelope.step
src/hardware/3D_Design/for_airflow/: Inverse_body_cut_for_airflow.FCStd
src/hardware/Pi_Base/: Pi_Base_Support.FCStd
src/hardware/component_step_files/: CAM_screws.step  M3.5x8mm Screw Hole Positive-Body.step  My_CAM.step  One_Battery_Slot.step
src/hardware/result_step_files/bottom/: Quarters-Cut_BL_CounterSink.step  Quarters-Cut_BL_CounterSink.stl  Quarters-Cut_BR.step  Quarters-Cut_BR.stl
src/hardware/result_step_files/pi/: Pi_Base_Support-Cut.step  Pi_Base_Support-Cut.stl
src/hardware/result_step_files/power_base/: PowerBoard_Support_Stand-Cut.step  (+1 more)
src/software/: README.md
src/software/acoustic_imager/: README.md  REFACTORING_SUMMARY.md  config.py  custom_types.py  main.py  state.py  system_info.py  touch_handler.py  usb_demo_reader.py
testing/DL_Beamformer/: DL_beamformer.py
testing/SPI_tests/: SPI_test.py  SPI_test_multiple_loop_throughput_with_FFTframe.py  SPI_test_throughput.py  SPI_test_throughput_with_FFTframe.py  spi_sweep_results.csv  test_frame_ready_gpio.py
testing/analog_processing/fft/: fft_processor.cpp  fft_processor.hpp
testing/analog_processing/preprocessing/: audio_preprocessing.cpp  audio_preprocessing.hpp
testing/dataframe/: fftframe.py  music_pipeline.py  updated_fftframe.py
testing/fermat_spiray_array/: fermat_spira_live_plot_with_fftframe.py  fermat_spiral_full_config.py  fermat_spiral_live_plot.py  fermat_spiral_live_plot_with_fftframe_mutiple_sources.py  fermat_spiral_static_plot.py  shape_config.py  shape_config_sanity.py  shape_config_sanity_with_plot.py
testing/heatmap/: CAMERA_SETUP_RASPI.md  FrameSync_realtime.txt  FrameSync_timestamp.txt  README.md  heatmap_dbscaler_with_video.py  heatmap_ferma_spiral_live_plot_with_dbscaler.py  heatmap_fermat_spiral_live_plot_noise_introduced.py  heatmap_fermat_spiral_live_plot_with_dbscaler_aperture_test.py  heatmap_fermat_spiral_live_plot_with_fftframe_multiple_sources.py  heatmap_fermat_sprial_live_plot_all_tests.py  heatmap_fermat_sprial_live_plot_with_bandpass_slider.py  heatmap_new_features.py  heatmap_pipeline_test.py  heatmap_spi_testing_14FPS_v4.py  heatmap_spi_testing_15FPS_v5.py  heatmap_spi_testing_19FPS_v6.py  heatmap_spi_testing_30FPS_v7.py  heatmap_spi_testing_35FPS_v8.py  heatmap_spi_testing_35FPS_v9_faster_menu.py  heatmap_spi_testing_7FPS_v2.py  heatmap_spi_testing_8FPS_v3.py  heatmap_spi_testing_v1.py  heatmap_spi_testing_v2.py  requirements.txt  test_camera_colors.py
testing/stm32_emulation/: G4.repl  flashController_g4.py  rcc_G4.py  run.resc
utilities/: firmware_flasher.py  stage_profiler.py
utilities/calibration/: SPI_settings.md  calibration_standalone_app.py  calibration_suite_cal_dump.txt  calibration_suite_last_result.txt  calibration_test.md  calibration_test.py  check_spi_devices.sh  delay_improvements.md  heatmap_pipeline_debug.py  metrics_debug.py  pin_monitor.py  pin_monitor_spi0.py  pin_monitor_spi1.py  run_suite.py  silence_check.py  spi_hex_dump.txt  spi_magic_probe.py  update_config_geometry.py
utilities/calibration/array_geometry/: array_geometry.csv  array_geometry.md  array_geometry.py
utilities/debug/: calibration_test.py  heatmap_pipeline_debug.py  metrics_debug.py  pin_monitor.py  spi_hex_dump.py
utilities/debug/array_geometry/: array_geometry.md  array_geometry.py
(+231 files in other folders)
